monitoring/infra/k8s/overlays/stage/patch-api-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: referrals-api
spec:
  replicas: 2
